add jwt auth
