# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Wookiist Sample Swagger API",
+        "title": "worklist Sample Swagger API",
         "contact": {},
         "version": "1.0"
     },
@@ -10,6 +10,11 @@
     "paths": {
         "/": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get the status of server.",
                 "consumes": [
                     "*/*"
@@ -34,6 +39,11 @@
         },
         "/api/v1/github/{owner}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get repos by owner",
                 "consumes": [
                     "application/json"
@@ -66,6 +76,11 @@
         },
         "/api/v1/github/{owner}/{repo}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get workflows by owner, repo",
                 "consumes": [
                     "application/json"
@@ -103,8 +118,33 @@
                 }
             }
         },
+        "/api/v1/login": {
+            "get": {
+                "description": "get access token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "login (issue token)",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/user": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get all user's info",
                 "consumes": [
                     "application/json"
@@ -126,6 +166,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create new user",
                 "consumes": [
                     "application/json"
@@ -154,6 +199,11 @@
         },
         "/api/v1/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get user's info",
                 "consumes": [
                     "application/json"
@@ -181,6 +231,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "update user's info",
                 "consumes": [
                     "application/json"
@@ -214,6 +269,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "delete user's info",
                 "consumes": [
                     "application/json"
@@ -296,6 +356,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "Accesskey based security scheme to secure api",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
