# internal/pkg/user/route/http/userHandler.go
@@ -31,13 +31,14 @@ func NewUserHandler(echo *echo.Echo, cfg config.Config) *UserHandler {
 	return handler
 }
 
-// @Summary Get users
-// @Description Get all user's info
-// @name getUsers
-// @Accept json
-// @Produce json
-// @Success 200 {array} model.User
-// @Router /api/v1/user [get]
+// @Summary		Get users
+// @Description	Get all user's info
+// @name			getUsers
+// @Accept			json
+// @Produce		json
+// @Success		200	{array}	model.User
+// @Router			/api/v1/user [get]
+// @Security    ApiKeyAuth
 func (u *UserHandler) getUsers(c echo.Context) error {
 
 	users := u.db.GetUsers()
@@ -45,14 +46,15 @@ func (u *UserHandler) getUsers(c echo.Context) error {
 	return c.JSON(http.StatusOK, users)
 }
 
-// @Summary Get user by id
-// @Description Get user's info
-// @name getUsersById
-// @Accept json
-// @Produce json
-// @Param id path string true "id of the user"
-// @Success 200 {object} model.User
-// @Router /api/v1/user/{id} [get]
+// @Summary		Get user by id
+// @Description	Get user's info
+// @name			getUsersById
+// @Accept			json
+// @Produce		json
+// @Param			id	path		string	true	"id of the user"
+// @Success		200	{object}	model.User
+// @Router			/api/v1/user/{id} [get]
+// @Security    ApiKeyAuth
 func (u *UserHandler) getUsersById(c echo.Context) error {
 
 	id, err := strconv.Atoi(c.Param("id"))
@@ -67,14 +69,15 @@ func (u *UserHandler) getUsersById(c echo.Context) error {
 	return c.JSON(http.StatusOK, user)
 }
 
-// @Summary Create user
-// @Description Create new user
-// @name createUser
-// @Accept json
-// @Produce json
-// @Param userBody body model.User true "User Info Body"
-// @Success 201
-// @Router /api/v1/user [post]
+// @Summary		Create user
+// @Description	Create new user
+// @name			createUser
+// @Accept			json
+// @Produce		json
+// @Param			userBody	body	model.User	true	"User Info Body"
+// @Success		201
+// @Router			/api/v1/user [post]
+// @Security    ApiKeyAuth
 func (u *UserHandler) createUser(c echo.Context) error {
 
 	user := new(model.User)
@@ -92,14 +95,15 @@ func (u *UserHandler) createUser(c echo.Context) error {
 
 }
 
-// @Summary delete user by id
-// @Description delete user's info
-// @name deleteUsersById
-// @Accept json
-// @Produce json
-// @Param id path string true "id of the user"
-// @Success 200
-// @Router /api/v1/user/{id} [delete]
+// @Summary		delete user by id
+// @Description	delete user's info
+// @name			deleteUsersById
+// @Accept			json
+// @Produce		json
+// @Param			id	path	string	true	"id of the user"
+// @Success		200
+// @Router			/api/v1/user/{id} [delete]
+// @Security    ApiKeyAuth
 func (u *UserHandler) deleteUsersById(c echo.Context) error {
 
 	id, err := strconv.Atoi(c.Param("id"))
@@ -115,15 +119,16 @@ func (u *UserHandler) deleteUsersById(c echo.Context) error {
 	return c.JSON(http.StatusBadRequest, nil)
 }
 
-// @Summary update user by id
-// @Description update user's info
-// @name updateUserById
-// @Accept json
-// @Produce json
-// @Param id path string true "id of the user"
-// @Param userBody body model.User true "User Info Body"
-// @Success 200
-// @Router /api/v1/user/{id} [put]
+// @Summary		update user by id
+// @Description	update user's info
+// @name			updateUserById
+// @Accept			json
+// @Produce		json
+// @Param			id			path	string		true	"id of the user"
+// @Param			userBody	body	model.User	true	"User Info Body"
+// @Success		200
+// @Router			/api/v1/user/{id} [put]
+// @Security    ApiKeyAuth
 func (u *UserHandler) updateUserById(c echo.Context) error {
 
 	id, err := strconv.Atoi(c.Param("id"))
